--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,15 @@
   <version>3.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Data Science Extensions - Parent POM</name>
+     <repositories>
+      <repository>
+         <id>github</id>
+         <url>https://maven.pkg.github.com/CareCloud/*</url>
+         <snapshots>
+            <enabled>true</enabled>
+         </snapshots>
+      </repository>
+   </repositories>
   <url>http://apache.org/</url>
   <licenses>
     <license>
