--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -1,24 +1,16 @@
-name: Publish
-
+name: Publish package to GitHub Packages
 on:
   push:
-    branches:
-      - master
-
-env:
-  GITHUB_TOKEN: ${{ secrets.GH_BUILD_TOKEN }}
-
+    branches: [ master ]
 jobs:
   publish:
-    name: Publish
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Scala and Java
-        uses: olafurpg/setup-scala@v10
+      - uses: actions/setup-java@v1
         with:
-          java-version: adopt@1.8
-      - name: Cache scala dependencies
-        uses: coursier/cache-action@v5
-      - name: Publish
-        run: sbt publish
+          java-version: 1.8
+      - name: Publish package
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_BUILD_TOKEN }}
