--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Build package
+        run: mvn clean install -pl spark-datasource-rest -DskipTests -Dscalastyle.skip=true
       - name: Publish package
         run: mvn --batch-mode deploy
         env:
