--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Build package
         run: mvn clean install -pl spark-datasource-rest -DskipTests -Dscalastyle.skip=true
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn deploy -pl spark-datasource-rest -DskipTests -Dscalastyle.skip=true
         env:
           GITHUB_TOKEN: ${{ secrets.GH_BUILD_TOKEN }}
