--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
       <id>central</id>
       <!-- This should be at top, it makes maven try the central repo first and then others and hence faster dep resolution -->
       <name>Maven Repository</name>
-      <url>https://maven.pkg.github.com/CareCloud/Data-Science-Extensions</url>
+      <url>https://repo1.maven.org/maven2</url>
       <releases>
         <enabled>true</enabled>
       </releases>
