--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
    <distributionManagement>
       <repository>
          <id>github</id>
-         <name>GitHub Packages</name>
+         <name>carecloud</name>
          <url>https://maven.pkg.github.com/CareCloud/Data-Science-Extensions</url>
       </repository>
    </distributionManagement>
