--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,24 @@
   <version>3.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Data Science Extensions - Parent POM</name>
-   <distributionManagement>
-      <repository>
-         <id>github</id>
-         <name>mtbc-edi-ak154</name>
-         <url>https://maven.pkg.github.com/mtbc-edi-ak154/data-dcience-extensions</url>
-      </repository>
-   </distributionManagement>
+  <profiles>
+    <profile>
+      <id>github</id>
+      <activation>
+        <property>
+          <name>useGitHubPackages</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <distributionManagement>
+        <repository>
+          <id>github</id>
+          <name>GitHub Packages</name>
+          <url>https://maven.pkg.github.com/mtbc-edi-ak154/data-science-extention</url>
+        </repository>
+      </distributionManagement>
+    </profile>
+  </profiles>
   <url>http://apache.org/</url>
   <licenses>
     <license>
