--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
   <groupId>org.apache.dsext</groupId>
   <artifactId>dsext-parent_2.12</artifactId>
   <version>3.1.1-SNAPSHOT</version>
+  <packaging>pom</packaging>
   <name>Data Science Extensions - Parent POM</name>
         <distributionManagement>
         <repository>
