--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <distributionManagement>
         <repository>
           <id>github</id>
-          <name>GitHub Packages</name>
+          <name>GitHub CareCloud Apache Maven Packages</name>
           <url>https://maven.pkg.github.com/carecloud/data-science-extention</url>
         </repository>
       </distributionManagement>
