--- a/pom.xml
+++ b/pom.xml
@@ -28,13 +28,13 @@
   <version>3.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Data Science Extensions - Parent POM</name>
-   <distributionManagement>
-      <repository>
-         <id>github</id>
-         <name>GitHub Packages</name>
-         <url>https://maven.pkg.github.com/CareCloud/Data-Science-Extensions</url>
-      </repository>
-   </distributionManagement>
+        <distributionManagement>
+        <repository>
+          <id>github</id>
+          <name>GitHub CareCloud Apache Maven Packages</name>
+          <url>https://maven.pkg.github.com/carecloud/data-science-extention</url>
+        </repository>
+      </distributionManagement>
   <url>http://apache.org/</url>
   <licenses>
     <license>
