--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -5,11 +5,15 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions: 
+      contents: read
+      packages: write 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '11'
+          distribution: 'adopt'
       - name: Build package
         run: mvn clean install -pl spark-datasource-rest -DskipTests -Dscalastyle.skip=true
       - name: Publish package
